crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__chosen_failure.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
case@Bool true of
  True -> trace "chosen" in error
  False -> 42
--- core after
trace "chosen" in error
--- uplc before
(program 1.1.0
  (case
    (con bool True)
    (con integer 42)
    (force [[(force (builtin trace)) (con string "chosen")] (delay (error))])))
--- uplc after
(program 1.1.0
  (force [[(force (builtin trace)) (con string "chosen")] (delay (error))]))
--- result
error: ExplicitErrorTerm
--- logs
["chosen"]
