crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__duplicate.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(root), pretty(after))"
---
--- before
case@Bool true of
  True -> 42
  True -> 0
--- after
case@Bool true of
  True -> 42
  True -> 0
--- errors
InvalidCase("duplicate boolean branch")
InvalidCase("duplicate boolean branch")
