crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__fields.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(root), pretty(after))"
---
--- before
case@Bool true of
  True field#1 -> 42
--- after
case@Bool true of
  True field#1 -> 42
--- errors
InvalidCase("boolean branches bind no fields")
InvalidCase("boolean branches bind no fields")
