crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__nested.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
case@Bool (case@Bool true of
  True -> true
  False -> false) of
  True -> 42
  False -> error
--- core after
42
--- uplc before
(program 1.1.0
  (case
    (case (con bool True) (con bool False) (con bool True))
    (error)
    (con integer 42)))
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
