crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__returned_delay.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
force (case@Bool true of
  True -> delay (trace "forced" in 42)
  False -> error)
--- core after
force (delay (trace "forced" in 42))
--- uplc before
(program 1.1.0
  (force
    (case
      (con bool True)
      (error)
      (delay
        (force
          [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))])))))
--- uplc after
(program 1.1.0
  (force
    (delay
      (force
        [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))]))))
--- result
(con integer 42)
--- logs
["forced"]
