crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__returned_function.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
(case@Bool true of
  True -> \p#1 : int -> trace "called" in p#1
  False -> error) 42
--- core after
(\p#1 : int -> trace "called" in p#1) 42
--- uplc before
(program 1.1.0
  [(case
    (con bool True)
    (error)
    (lam p_1 (force [[(force (builtin trace)) (con string "called")] (delay p_1)])))
    (con integer 42)])
--- uplc after
(program 1.1.0
  [(lam p_1 (force [[(force (builtin trace)) (con string "called")] (delay p_1)]))
    (con integer 42)])
--- result
(con integer 42)
--- logs
["called"]
