crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__strict_failure.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
let ignored#1 : int = error in
case@Bool true of
  True -> 42
  False -> error
--- core after
let ignored#1 : int = error in
42
--- uplc before
(program 1.1.0
  [(lam ignored_1 (case (con bool True) (error) (con integer 42))) (error)])
--- uplc after
(program 1.1.0 [(lam ignored_1 (con integer 42)) (error)])
--- result
error: ExplicitErrorTerm
--- logs
[]
